LOG Updated to 0.16 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  App-SmokeBox-PerlVersion-0.08.tar.gz: 7f84b6759141fc194ebe2c3eacc75ac1bf9194ff
 sources:
-  "App-SmokeBox-PerlVersion-0.08.tar.gz": 7f84b6759141fc194ebe2c3eacc75ac1bf9194ff
+  App-SmokeBox-PerlVersion-0.16.tar.gz: 4612e9b03181a036f612175b56b96a74274a4b31
